--- a/index.html
+++ b/index.html
@@ -22,15 +22,32 @@
           <div class="logo_can">
             <img src="img/can_dxc_logo.png" height="50px"/>
           </div>
+          <!-- <div class="menu">
+            <img src="img/icon_menu.png" height="20px"/>
+          </div> -->
         </div>
 
         <div class="banner_container">
           <div class="banner">
-            <div class="banner_title1">Welcome</div>
+            <div class="banner_title1">Technical Pathways</div>
             <div class="banner_title2">
-              The Innovation Capability Team provides exceptional support for in-house teams by empowering them with tools and capabilities to take an innovative approach to solve their business challenges and opportunities.
+              As we continue to evolve from a bank to a digitally enabled organisation, deep technical skills are critical to our success and so we have designed an alternative path where employees are recognised and rewarded for technical leadership, providing them with a clear path for advancement, alongside the traditional people leadership career pathway.
             </div>
           </div>
+          <div class="accent">
+            <div class="accent_blue"></div>
+            <div class="accent_gold"></div>
+          </div>
+        </div>
+
+        <div class="statement">
+          <div class="title">Technical Pathway Framework</div>
+          <div class="description">The technical pathway is a framework to help support career progression and recognition for both people leaders and more technically focussed individuals. It is not prescriptive but can help you understand how your current skills or role align to other roles within the framework and what you may need to develop to progress or change role.</div>
+        </div>
+
+        <div class="statement">
+          <div class="title">Explore the pathways</div>
+          <div class="description">Select one of the technical pathways below to learn more</div>
         </div>
 
         <div class="helper helper_start">
