--- a/engineering.html
+++ b/engineering.html
@@ -11,7 +11,8 @@
       <link rel="stylesheet" href="js/slick/slick.css"/>
       <link rel="stylesheet" href="js/slick/slick-theme.css"/>
       <link rel="stylesheet" href="css/main.css"/>
-      <link rel="stylesheet" href="css/index.css"/>
+      <!-- <link rel="stylesheet" href="css/index.css"/> -->
+      <link rel="stylesheet" href="css/engineering.css"/>
       <script src="js/vendor/modernizr-2.8.3.min.js"></script>
   </head>
   <body>
@@ -24,10 +25,12 @@
 
     <div class="banner_container">
       <div class="banner">
-        <div class="banner_title1">Technical Pathways</div>
-        <div class="banner_title2">
-          As we continue to evolve from a bank to a digitally enabled organisation, deep technical skills are critical to our success and so we have designed an alternative path where employees are recognised and rewarded for technical leadership, providing them with a clear path for advancement, alongside the traditional people leadership career pathway.
+        <div class="banner_back">
+          <a href="index.html">
+            <img src="img/icon_back.png" height="70px"/>
+          </a>
         </div>
+        <div class="banner_title1">Engineering</div>
       </div>
       <div class="accent">
         <div class="accent_blue"></div>
@@ -36,30 +39,64 @@
     </div>
 
     <div class="statement">
-      <div class="title">Technical Pathway Framework</div>
-      <div class="description">The technical pathway is a framework to help support career progression and recognition for both people leaders and more technically focussed individuals. It is not prescriptive but can help you understand how your current skills or role align to other roles within the framework and what you may need to develop to progress or change role.</div>
+      <div class="title">Engineering Pathway</div>
+      <!-- <div class="description">These roles work very closely with businesses to challenge existing thinking, lead innovation, improve customer experience and optimize operational performance. Data Scientists are curious and creative, passionate about problem solving and are highly skilled to deal with ambiguity and complexity. They have advanced knowledge in machine learning, computer science, complex system and network, statistics, logic, modelling and math.</div> -->
     </div>
 
-    <div class="tree tree_home">
+    <div class="pillars">
+      <div class="pillar pillar_active pillar_data">
+        <div class="icon">
+          <img src="img/data_engg.png" height="24px"/>
+        </div>
+        <div class="title">
+          <div>Data Engineering</div>
+        </div>
+      </div>
+      <div class="pillar_spacer"></div>
+      <div class="pillar pillar_infra">
+        <div class="icon">
+          <img src="img/infra_engg.svg" height="24px"/>
+        </div>
+        <div class="title">
+          <div>Infrastructure Engineering</div>
+        </div>
+      </div>
+      <div class="pillar_spacer"></div>
+      <div class="pillar pillar_software">
+        <div class="icon">
+          <img src="img/software_engg.png" height="24px"/>
+        </div>
+        <div class="title">
+          <div>Software Engineering</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="statement">
+      <div class="title pillar_title">Data Engineering</div>
+      <div class="description">Individuals collaborate with data scientists, data analysts and software engineers to design, build and productionise fit-for-purpose data assets and products for discovery, modelling and decisioning.</div>
+    </div>
+
+    <div class="tree tree_analytics">
       <div class="col"></div>
       <div class="col">
         <div class="top_spacer"></div>
         <div class="path_label">
           <div>Technical Focus</div>
         </div>
-        <div class="role role_executive_consultant">
+        <div class="role role_executive_data_scientist">
           <div class="icon gold"><img src="img/icon-user.png" height="20px"/></div>
-          <div class="label">Executive Consultant</div>
+          <div class="label">Executive Engineer</div>
         </div>
         <div class="role_spacer"><div>|</div></div>
         <div class="role">
           <div class="icon gold"><img src="img/icon-user.png" height="20px"/></div>
-          <div class="label">Principal Consultant</div>
+          <div class="label">Principal Engineer</div>
         </div>
         <div class="role_spacer"><div>|</div></div>
         <div class="role">
           <div class="icon gold"><img src="img/icon-user.png" height="20px"/></div>
-          <div class="label">Specialist Consultant</div>
+          <div class="label">Specialist Engineer</div>
         </div>
         <div class="role_spacer_end"><div></div></div>
       </div>
@@ -72,19 +109,19 @@
         <div class="mid_spacer"></div>
         <div class="circle_container">
           <div class="circle">
-            <div>Senior Consultant</div>
+            <div>Senior Engineer</div>
           </div>
         </div>
         <div class="circle_spacer"><img src="img/icon_arrowup.png" /></div>
         <div class="circle_container">
           <div class="circle">
-            <div>Consultant</div>
+            <div>Engineer</div>
           </div>
         </div>
         <div class="circle_spacer"><img src="img/icon_arrowup.png" /></div>
         <div class="circle_container">
           <div class="circle">
-            <div>Graduate</div>
+            <div>Graduate / Associate</div>
           </div>
         </div>
       </div>
@@ -95,134 +132,28 @@
         </div>
         <div class="role">
           <div class="icon blue"><img src="img/icon-user.png" height="20px"/></div>
-          <div class="label">Executive Manager</div>
+          <div class="label">Executive Manager Engineering</div>
         </div>
         <div class="role_spacer"><div>|</div></div>
         <div class="role">
           <div class="icon blue"><img src="img/icon-user.png" height="20px"/></div>
-          <div class="label">Senior Manager</div>
+          <div class="label">Senior Manager Engineering</div>
         </div>
         <div class="role_spacer"><div>|</div></div>
         <div class="role">
           <div class="icon blue"><img src="img/icon-user.png" height="20px"/></div>
-          <div class="label">Manager</div>
+          <div class="label">Manager Engineering</div>
         </div>
         <div class="role_spacer_end"><div></div></div>
       </div>
       <div class="col"></div>
     </div>
 
-    <div class="statement">
-      <div class="title">Explore the pathways</div>
-      <div class="description">Select one of the technical pathways below to learn more.</div>
-    </div>
-
-    <div class="pathways">
-      <div class="pathway pathway_analytics">
-        <div class="pathway_container">
-          <div class="image pw_analytics"></div>
-          <div class="title">
-            <div class="text">Analytics</div>
-            <div class="icon">
-              <img src="img/icon_chart.png" height="20px" />
-            </div>
-          </div>
-          <div class="more">more</div>
-        </div>
-      </div>
-      <div class="pathway">
-        <div class="pathway_container">
-          <div class="image pw_architecture"></div>
-          <div class="title">
-            <div class="text">Architecture</div>
-            <div class="icon">
-              <img src="img/icon_architecture.png" height="20px" />
-            </div>
-          </div>
-          <div class="more">more</div>
-        </div>
-      </div>
-      <div class="pathway">
-        <div class="pathway_container">
-          <div class="image pw_cyber"></div>
-          <div class="title">
-            <div class="text">Cyber</div>
-            <div class="icon">
-              <img src="img/icon_cyber.png" height="20px" />
-            </div>
-          </div>
-          <div class="more">more</div>
-        </div>
-      </div>
-      <div class="pathway pathway_engineering">
-        <div class="pathway_container">
-          <div class="image pw_engineering"></div>
-          <div class="title">
-            <div class="text">Engineering</div>
-            <div class="icon">
-              <img src="img/icon_engineering.png" height="20px" />
-            </div>
-          </div>
-          <div class="more">more</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="statement">
-      <div class="title">Values</div>
-      <div class="description">
-        Our values guide everything we do and are critical to our future success.
-      </div>
-    </div>
-
-    <div class="values">
-      <div class="value">
-        <div class="value_container">
-          <a href="http://commnet2.cba/Main/about-cba/vision-and-values/Pages/default.aspx" target="_blank">INTEGRITY</a>
-        </div>
-      </div>
-      <div class="value">
-        <div class="value_container">
-          <a href="http://commnet2.cba/Main/about-cba/vision-and-values/Pages/default.aspx" target="_blank">ACCOUNTABILITY</a>
-        </div>
-      </div>
-      <div class="value">
-        <div class="value_container">
-          <a href="http://commnet2.cba/Main/about-cba/vision-and-values/Pages/default.aspx" target="_blank">COLLABORATION</a>
-        </div>
-      </div>
-      <div class="value">
-        <div class="value_container">
-          <a href="http://commnet2.cba/Main/about-cba/vision-and-values/Pages/default.aspx" target="_blank">EXCELLENCE</a>
-        </div>
-      </div>
-      <div class="value">
-        <div class="value_container">
-          <a href="http://commnet2.cba/Main/about-cba/vision-and-values/Pages/default.aspx" target="_blank">SERVICE</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="statement">
-      <div class="title">FAQ</div>
-      <div class="description faq">
-        <div class="faq-q">Q: Lorem ipsum dolor sit amet, consectetur adipiscing elit?</div>
-        <div class="faq-a">A: Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
-
-        <div class="faq-q">Q: Lorem ipsum dolor sit amet, consectetur adipiscing elit?</div>
-        <div class="faq-a">A: Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
-
-        <div class="faq-q">Q: Lorem ipsum dolor sit amet, consectetur adipiscing elit?</div>
-        <div class="faq-a">A: Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
-      </div>
-    </div>
-
-
     <div class="footer">
       <!-- Check us out in <img src="img/yammer.png" height="16px" /> -->
     </div>
 
-    <div class="modal modal-home">
+    <!-- <div class="modal">
       <div class="content">
         <div class="close">
           <img class="icon_close" src="img/icon_close.png" height="20px" />
@@ -263,7 +194,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <script src="js/vendor/jquery-1.12.0.min.js"></script>
