--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <div class="logo_can">
         <img src="img/can_dxc_logo.png" height="60px"/>
       </div>
+      <div class="menu">
+        <img src="img/icon_menu.png" height="30px"/>
+      </div>
     </div>
 
     <div class="banner_container">
