fixed values hover prop

--- a/index.html
+++ b/index.html
@@ -180,29 +180,19 @@
 
     <div class="values">
       <div class="value">
-        <div class="value_container">
-          <a href="http://commnet2.cba/Main/about-cba/vision-and-values/Pages/default.aspx" target="_blank">INTEGRITY</a>
-        </div>
+        <div class="value_container">INTEGRITY</a></div>
       </div>
       <div class="value">
-        <div class="value_container">
-          <a href="http://commnet2.cba/Main/about-cba/vision-and-values/Pages/default.aspx" target="_blank">ACCOUNTABILITY</a>
-        </div>
+        <div class="value_container">ACCOUNTABILITY</a></div>
       </div>
       <div class="value">
-        <div class="value_container">
-          <a href="http://commnet2.cba/Main/about-cba/vision-and-values/Pages/default.aspx" target="_blank">COLLABORATION</a>
-        </div>
+        <div class="value_container">COLLABORATION</a></div>
       </div>
       <div class="value">
-        <div class="value_container">
-          <a href="http://commnet2.cba/Main/about-cba/vision-and-values/Pages/default.aspx" target="_blank">EXCELLENCE</a>
-        </div>
+        <div class="value_container">EXCELLENCE</a></div>
       </div>
       <div class="value">
-        <div class="value_container">
-          <a href="http://commnet2.cba/Main/about-cba/vision-and-values/Pages/default.aspx" target="_blank">SERVICE</a>
-        </div>
+        <div class="value_container">SERVICE</a></div>
       </div>
     </div>
 
