--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 
     <div class="banner_container">
       <div class="banner">
-        <div class="banner_title1">Technical Pathways</div>
-        <div class="banner_title2">
-          As we continue to evolve from a bank to a digitally enabled organisation, deep technical skills are critical to our success and so we have designed an alternative path where employees are recognised and rewarded for technical leadership, providing them with a clear path for advancement, alongside the traditional people leadership career pathway.
+        <div class="banner_overlay">
+          <div class="banner_title1">Technical Pathways</div>
+          <div class="banner_title2">
+            As we continue to evolve from a bank to a digitally enabled organisation, deep technical skills are critical to our success and so we have designed an alternative path where employees are recognised and rewarded for technical leadership, providing them with a clear path for advancement, alongside the traditional people leadership career pathway.
+          </div>
         </div>
       </div>
       <div class="accent">
@@ -197,17 +199,7 @@
     </div>
 
     <div class="statement">
-      <div class="title">FAQ</div>
-      <div class="description faq">
-        <div class="faq-q">Q: Lorem ipsum dolor sit amet, consectetur adipiscing elit?</div>
-        <div class="faq-a">A: Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
-
-        <div class="faq-q">Q: Lorem ipsum dolor sit amet, consectetur adipiscing elit?</div>
-        <div class="faq-a">A: Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
-
-        <div class="faq-q">Q: Lorem ipsum dolor sit amet, consectetur adipiscing elit?</div>
-        <div class="faq-a">A: Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
-      </div>
+      <div class="title faq-button">FAQs</div>
     </div>
 
 
@@ -215,44 +207,117 @@
       <!-- Check us out in <img src="img/yammer.png" height="16px" /> -->
     </div>
 
-    <div class="modal modal-home">
-      <div class="content">
-        <div class="close">
-          <img class="icon_close" src="img/icon_close.png" height="20px" />
-        </div>
-        <div class="title">Executive Consultant</div>
-        <div class="focus">Technical Leadership Focus</div>
-        <div class="video">
-          <iframe width="100%" height="315" src="https://www.youtube.com/embed/FfXU7ZW2s8g" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="description">
-          <div class="purpose">
-            <div class="heading">Purpose of this role</div>
-            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
-            <div class="heading">Key responsibilities</div>
-            <div>
-              <ul class="key_responsibilities">
-                <li>Extensive demonstrated competence and experience in core technical practices and capabilities.</li>
-                <li>Able to complete high complexity technical tasks without assistance.</li>
-                <li>Provides high visibility and impact technical leadership to other technicians at scale.</li>
-                <li>Leads technical design for initiatives based on established design patterns and technical standards.</li>
-                <li>Leads definition of design patterns and technical standards.</li>
-                <li>Leading contribution into major aspects of technical stream and broader IT strategy.</li>
-                <li>Utilises and makes a notable contribution to industry resources and practices.</li>
-                <li>Seen as an expert by industry standards.</li>
+    <div class="modal-home">
+      <div class="modal">
+        <div class="content">
+          <div class="close">
+            <img class="icon_close" src="img/icon_close.png" height="20px" />
+          </div>
+          <div class="title">Executive Consultant</div>
+          <div class="focus">Technical Leadership Focus</div>
+          <div class="description">
+            <div class="video">
+              <iframe width="100%" height="315" src="https://www.youtube.com/embed/FfXU7ZW2s8g" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="purpose">
+              <div class="heading">Purpose of this role</div>
+              <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
+              <div class="heading">Key responsibilities</div>
+              <div>
+                <ul class="key_responsibilities">
+                  <li>Extensive demonstrated competence and experience in core technical practices and capabilities.</li>
+                  <li>Able to complete high complexity technical tasks without assistance.</li>
+                  <li>Provides high visibility and impact technical leadership to other technicians at scale.</li>
+                  <li>Leads technical design for initiatives based on established design patterns and technical standards.</li>
+                  <li>Leads definition of design patterns and technical standards.</li>
+                  <li>Leading contribution into major aspects of technical stream and broader IT strategy.</li>
+                  <li>Utilises and makes a notable contribution to industry resources and practices.</li>
+                  <li>Seen as an expert by industry standards.</li>
+                </ul>
+              </div>
+              <div class="heading">What 'AMAZING' looks like</div>
+              <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
+            </div>
+            <div class="links">
+              <div class="">LINKS</div>
+              <ul class="ul_links">
+                <li>Analytics</li>
+                <li>Architecture</li>
+                <li>Cyber</li>
+                <li>Engineering</li>
               </ul>
             </div>
-            <div class="heading">What 'AMAZING' looks like</div>
-            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
           </div>
-          <div class="links">
-            <div class="">LINKS</div>
-            <ul class="ul_links">
-              <li>Analytics</li>
-              <li>Architecture</li>
-              <li>Cyber</li>
-              <li>Engineering</li>
-            </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal-faq">
+      <div class="modal">
+        <div class="content">
+          <div class="close">
+            <img class="icon_close" src="img/icon_close.png" height="20px" />
+          </div>
+          <div class="title">FAQs</div>
+          <!-- <div class="focus">Technical Leadership Focus</div> -->
+          <!-- <div class="video">
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/FfXU7ZW2s8g" frameborder="0" allowfullscreen></iframe>
+          </div> -->
+          <div class="description">
+            <div class="faq">
+              <div class="faq-q">What is a technical career pathway within ES?</div>
+              <div class="faq-a">
+                <p>Traditionally individuals have progressed in Enterprise Services by taking on people leadership responsibilities in order to become more senior. As we continue to evolve from a bank to a digitally enabled organisation, deep technical skills are in high demand and we need to recognise and support these individuals.</p>
+
+                <p>We have designed an alternative path where employees are recognised and rewarded for technical leadership, providing them with a clear path for advancement, alongside the traditional people leadership career pathway.</p>
+
+                <p>We have identified 4 areas with the greatest current need for Technical Pathways in ES and they are: Analytics, Architecture, Engineering and Cyber.</p>
+              </div>
+            </div>
+
+            <div class="faq">
+              <div class="faq-q">As an employee, what does this mean for my career?</div>
+              <div class="faq-a">Individuals can identify the most appropriate pathway based on their interests and skills. Current or aspiring people leaders can pursue a management pathway if desired and technical leaders can continue to build their deep technical skills/expertise.</div>
+            </div>
+
+            <div class="faq">
+              <div class="faq-q">How do I use this to guide my career?</div>
+              <div class="faq-a">
+                The technical career pathway is a framework to help support career progression and recognition for both people leaders and more technically focussed individuals. It is not prescriptive but can help you understand how your current skills or role align to other roles within the framework and what you may need to develop to progress or change role. It also provides a useful reference point for career conversations with your manager.
+              </div>
+            </div>
+
+            <div class="faq">
+              <div class="faq-q">Does this mean my role will change?</div>
+              <div class="faq-a">
+                Your current role won’t change as a result of the Technical Career Pathway being introduced.
+              </div>
+            </div>
+
+            <div class="faq">
+              <div class="faq-q">Does this mean I don’t have to manage people to get promoted?</div>
+              <div class="faq-a">
+                The technical career pathway will allow you to be recognised in more senior roles without having to move into people management. Your primary focus will be technical thought leadership and work, however depending on your individual team structure and your career aspirations, you may have a small team under you at some point.
+              </div>
+            </div>
+
+            <div class="faq">
+              <div class="faq-q">
+                Can I move between the 2 pathways if I decide I want to manage people later on?
+              </div>
+              <div class="faq-a">
+                Yes, but this will depend on your broader skillset and the individual role you are considering.
+              </div>
+            </div>
+
+            <div class="faq">
+              <div class="faq-q">
+                Why is my role not included?
+              </div>
+              <div class="faq-a">
+                Business leaders in consultation with HR have identified technical roles based on those areas where technical skills are currently in highest demand and therefore have the greatest need for a Technical Pathway. We will focus on these roles initially and review these in the future.
+              </div>
+            </div>
           </div>
         </div>
       </div>
