dynamic data for each role

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
           <div class="label">Executive Consultant</div>
         </div>
         <div class="role_spacer"><div>|</div></div>
-        <div class="role">
+        <div class="role role_principal_consultant">
           <div class="icon gold"><img src="img/icon-user.png" height="20px"/></div>
           <div class="label">Principal Consultant</div>
         </div>
         <div class="role_spacer"><div>|</div></div>
-        <div class="role">
+        <div class="role role_specialist_consultant">
           <div class="icon gold"><img src="img/icon-user.png" height="20px"/></div>
           <div class="label">Specialist Consultant</div>
         </div>
@@ -98,17 +98,17 @@
         <div class="path_label">
           <div>People Manager Focus</div>
         </div>
-        <div class="role">
+        <div class="role role_executive_manager">
           <div class="icon blue"><img src="img/icon-user.png" height="20px"/></div>
           <div class="label">Executive Manager</div>
         </div>
         <div class="role_spacer"><div>|</div></div>
-        <div class="role">
+        <div class="role role_senior_manager">
           <div class="icon blue"><img src="img/icon-user.png" height="20px"/></div>
           <div class="label">Senior Manager</div>
         </div>
         <div class="role_spacer"><div>|</div></div>
-        <div class="role">
+        <div class="role role_manager">
           <div class="icon blue"><img src="img/icon-user.png" height="20px"/></div>
           <div class="label">Manager</div>
         </div>
@@ -135,7 +135,7 @@
           <div class="more">more</div>
         </div>
       </div>
-      <div class="pathway">
+      <div class="pathway pathway_architecture">
         <div class="pathway_container">
           <div class="image pw_architecture"></div>
           <div class="title">
@@ -147,7 +147,7 @@
           <div class="more">more</div>
         </div>
       </div>
-      <div class="pathway">
+      <div class="pathway pathway_cyber">
         <div class="pathway_container">
           <div class="image pw_cyber"></div>
           <div class="title">
@@ -198,8 +198,9 @@
       </div>
     </div>
 
-    <div class="statement">
-      <div class="title faq-button">FAQs</div>
+    <div class="statement faq-button">
+      <div class="title">FAQs</div>
+      <div class="description">Click here to browse frequently asked questions.</div>
     </div>
 
 
@@ -235,16 +236,16 @@
                   <li>Seen as an expert by industry standards.</li>
                 </ul>
               </div>
-              <div class="heading">What 'AMAZING' looks like</div>
+              <div class="heading">What does 'AMAZING' look like?</div>
               <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</div>
             </div>
             <div class="links">
               <div class="">LINKS</div>
               <ul class="ul_links">
-                <li>Analytics</li>
-                <li>Architecture</li>
-                <li>Cyber</li>
-                <li>Engineering</li>
+                <li><a href="analytics.html">Analytics</a></li>
+                <li><a href="architecture.html">Architecture</li>
+                <li><a href="cyber.html">Cyber</li>
+                <li><a href="engineering.html">Engineering</a></li>
               </ul>
             </div>
           </div>
