--- a/index.html
+++ b/index.html
@@ -29,53 +29,11 @@
     </div>
   </div>
 
-  <div class="statement">
-    <div class="title">Technical Pathway Framework</div>
-    <div class="description">The technical pathway is a framework to help support career progression and recognition for both people leaders and more technically focussed individuals. It is not prescriptive but can help you understand how your current skills or role align to other roles within the framework and what you may need to develop to progress or change role.</div>
-  </div>
-
-  <!--<div class="pillars">
-    <div class="pillar pillar_active pillar_devops">
-      <div class="icon">
-        <img src="img/icon_devops2.svg" height="24px"/>
-      </div>
-      <div class="title">
-        <div>Dev Ops<br />Engineering</div>
-      </div>
-    </div>
-    <div class="pillar_spacer"></div>
-    <div class="pillar pillar_infra">
-      <div class="icon">
-        <img src="img/icon_infra.svg" height="24px"/>
-      </div>
-      <div class="title">
-        <div>Infrastructure<br />Engineering</div>
-      </div>
-    </div>
-    <div class="pillar_spacer"></div>
-    <div class="pillar pillar_software">
-      <div class="icon">
-        <img src="img/icon_software.svg" height="24px"/>
-      </div>
-      <div class="title">
-        <div>Software<br />Engineering</div>
-      </div>
-    </div>
-    <div class="pillar_spacer"></div>
-    <div class="pillar pillar_systems">
-      <div class="icon">
-        <img src="img/icon_systems2.svg" height="24px"/>
-      </div>
-      <div class="title">
-        <div>Systems<br />Engineering</div>
-      </div>
-    </div>
-  </div>-->
 
   <div class="statement">
-    <div class="title pillar_title">Dev Ops Engineering</div>
+    <div class="title pillar_title">Technical Pathway Framework</div>
     <div class="description pillar_description">
-      These roles work with development and operations communities to drive velocity and quality of software delivered. DevOps engineers are technical, collaborative, communicative, and enjoy finding efficiencies and therefore are always looking to automate and monitor the process of software integration, testing, deployment, and infrastructure changes.
+      The technical pathway is a framework to help support career progression and recognition for both people leaders and more technically focussed individuals. It is not prescriptive but can help you understand how your current skills or role align to other roles within the framework and what you may need to develop to progress or change role.
     </div>
   </div>
 
@@ -94,7 +52,7 @@
               <img src="img/icon-user.png" height="20px"/>
             </td>
             <td class="td-text role">
-              DevOps T1
+              Executive Consultant
             </td>
           </tr>
         </tbody>
@@ -107,7 +65,7 @@
               <img src="img/icon-user.png" height="20px"/>
             </td>
             <td class="td-text role">
-              DevOps T2
+              Principal Consultant
             </td>
           </tr>
         </tbody>
@@ -121,7 +79,7 @@
               <img src="img/icon-user.png" height="20px"/>
             </td>
             <td class="td-text role">
-              DevOps T3
+              Specialist Consultant
             </td>
           </tr>
         </tbody>
@@ -169,7 +127,7 @@
               <img src="img/icon-user.png" height="20px"/>
             </td>
             <td class="td-text role">
-              DevOps M1
+              Executive Manager
             </td>
           </tr>
         </tbody>
@@ -182,7 +140,7 @@
               <img src="img/icon-user.png" height="20px"/>
             </td>
             <td class="td-text role">
-              DevOps M2
+              Senior Manager
             </td>
           </tr>
         </tbody>
@@ -195,7 +153,7 @@
               <img src="img/icon-user.png" height="20px"/>
             </td>
             <td class="td-text role">
-              DevOps M3
+              Manager
             </td>
           </tr>
         </tbody>
@@ -248,6 +206,8 @@
       </div>
     </div>
   </div>
+
+
 
   <div class="statement faq-button">
     <div class="title">FAQs</div>
