--- a/index.html
+++ b/index.html
@@ -214,17 +214,13 @@
     <div class="description">Click here to browse frequently asked questions.</div>
   </div>
 
-  <div class="modal-faq">
+  <!-- <div class="modal-faq">
     <div class="modal">
       <div class="content">
         <div class="close">
           <img class="icon_close" src="img/icon_close.png" height="20px" />
         </div>
         <div class="title">FAQs</div>
-        <!-- <div class="focus">Technical Leadership Focus</div> -->
-        <!-- <div class="video">
-          <iframe width="100%" height="315" src="https://www.youtube.com/embed/FfXU7ZW2s8g" frameborder="0" allowfullscreen></iframe>
-        </div> -->
         <div class="description">
           <div class="faq">
             <div class="faq-q">What is a technical career pathway within ES?</div>
@@ -284,9 +280,70 @@
         </div>
       </div>
     </div>
+  </div> -->
+
+  <div class="modal" id="faq">
+    <div class="modal-content">
+      <div class="title">FAQs</div>
+      <div class="description">
+        <div class="faq">
+          <div class="faq-q">What is a technical career pathway within ES?</div>
+          <div class="faq-a">
+            <p>Traditionally individuals have progressed in Enterprise Services by taking on people leadership responsibilities in order to become more senior. As we continue to evolve from a bank to a digitally enabled organisation, deep technical skills are in high demand and we need to recognise and support these individuals.</p>
+
+            <p>We have designed an alternative path where employees are recognised and rewarded for technical leadership, providing them with a clear path for advancement, alongside the traditional people leadership career pathway.</p>
+
+            <p>We have identified 4 areas with the greatest current need for Technical Pathways in ES and they are: Analytics, Architecture, Engineering and Cyber.</p>
+          </div>
+        </div>
+
+        <div class="faq">
+          <div class="faq-q">As an employee, what does this mean for my career?</div>
+          <div class="faq-a">Individuals can identify the most appropriate pathway based on their interests and skills. Current or aspiring people leaders can pursue a management pathway if desired and technical leaders can continue to build their deep technical skills/expertise.</div>
+        </div>
+
+        <div class="faq">
+          <div class="faq-q">How do I use this to guide my career?</div>
+          <div class="faq-a">
+            The technical career pathway is a framework to help support career progression and recognition for both people leaders and more technically focussed individuals. It is not prescriptive but can help you understand how your current skills or role align to other roles within the framework and what you may need to develop to progress or change role. It also provides a useful reference point for career conversations with your manager.
+          </div>
+        </div>
+
+        <div class="faq">
+          <div class="faq-q">Does this mean my role will change?</div>
+          <div class="faq-a">
+            Your current role won’t change as a result of the Technical Career Pathway being introduced.
+          </div>
+        </div>
+
+        <div class="faq">
+          <div class="faq-q">Does this mean I don’t have to manage people to get promoted?</div>
+          <div class="faq-a">
+            The technical career pathway will allow you to be recognised in more senior roles without having to move into people management. Your primary focus will be technical thought leadership and work, however depending on your individual team structure and your career aspirations, you may have a small team under you at some point.
+          </div>
+        </div>
+
+        <div class="faq">
+          <div class="faq-q">
+            Can I move between the 2 pathways if I decide I want to manage people later on?
+          </div>
+          <div class="faq-a">
+            Yes, but this will depend on your broader skillset and the individual role you are considering.
+          </div>
+        </div>
+
+        <div class="faq">
+          <div class="faq-q">
+            Why is my role not included?
+          </div>
+          <div class="faq-a">
+            Business leaders in consultation with HR have identified technical roles based on those areas where technical skills are currently in highest demand and therefore have the greatest need for a Technical Pathway. We will focus on these roles initially and review these in the future.
+          </div>
+        </div>
+    </div>
   </div>
 
-  <div class="footer"></div>
+  <!-- <div class="footer"></div> -->
 
   <script src="js/vendor/jquery-1.12.0.min.js"></script>
   <script src="js/slick/slick.js"></script>
