--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
 
   <div class="modal" id="faq">
     <div class="modal-content">
-      <div class="title">FAQs</div>
+      <img class="icon_close" src="img/icon_close.png" height="14px" />
+      <div class="modal-title">FAQs</div>
       <div class="description">
         <div class="faq">
           <div class="faq-q">What is a technical career pathway within ES?</div>
