--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="title">
           <div class="text">DevOps Engineering</div>
         </div>
-        <div class="more">more</div>
+        <div class="more">Learn more</div>
       </div>
     </div>
     <div class="pathway pathway_infra">
@@ -184,7 +184,7 @@
         <div class="title">
           <div class="text">Infrastructure Engineering</div>
         </div>
-        <div class="more">more</div>
+        <div class="more">Learn more</div>
       </div>
     </div>
     <div class="pathway pathway_software">
@@ -193,7 +193,7 @@
         <div class="title">
           <div class="text">Software Engineering</div>
         </div>
-        <div class="more">more</div>
+        <div class="more">Learn more</div>
       </div>
     </div>
     <div class="pathway pathway_systems">
@@ -202,7 +202,7 @@
         <div class="title">
           <div class="text">Systems Engineering</div>
         </div>
-        <div class="more">more</div>
+        <div class="more">Learn more</div>
       </div>
     </div>
   </div>
@@ -311,6 +311,13 @@
         </div>
 
         <div class="faq">
+          <div class="faq-q">Should my current or future job title be updated to align with Technical Pathways roles?</div>
+          <div class="faq-a">
+            As a framework, Technical Pathways roles should be interpreted as reference points only. Your job title may be tailored to reflect the specialist field or body of knowledge of your practice.
+          </div>
+        </div>
+
+        <div class="faq">
           <div class="faq-q">Does this mean my role will change?</div>
           <div class="faq-a">
             Your current role won’t change as a result of the Technical Career Pathway being introduced.
@@ -329,7 +336,7 @@
             Can I move between the 2 pathways if I decide I want to manage people later on?
           </div>
           <div class="faq-a">
-            Yes, but this will depend on your broader skillset and the individual role you are considering.
+            Yes lateral movements may depend on your broader skillset and the individual role you are considering.
           </div>
         </div>
 
@@ -339,6 +346,42 @@
           </div>
           <div class="faq-a">
             Business leaders in consultation with HR have identified technical roles based on those areas where technical skills are currently in highest demand and therefore have the greatest need for a Technical Pathway. We will focus on these roles initially and review these in the future.
+          </div>
+        </div>
+
+        <div class="faq">
+          <div class="faq-q">
+            Isn’t the Platform model about T-shaping? How does this align?
+          </div>
+          <div class="faq-a">
+            Yes, there is an element of t-shaping involved with the new project/Delivery Excellence Framework. We recognise that broad knowledge and cross-skilling will continue to be key factors to the ongoing investment and development of our people. Complementing this, deep technical expertise will be required to enable Platforms, and provide subject matter expertise across a flexible workforce.
+          </div>
+        </div>
+
+        <div class="faq">
+          <div class="faq-q">
+            What does success look like?
+          </div>
+          <div class="faq-a">
+            By creating dual pathways for ES employees, there is a clear pathway for technical leaders to progress their careers whilst continuing to build their technical expertise.
+          </div>
+        </div>
+
+        <div class="faq">
+          <div class="faq-q">
+            Is this framework final?
+          </div>
+          <div class="faq-a">
+            The framework will continue to be reviewed to understand what’s working well and what may need rethinking.
+          </div>
+        </div>
+
+        <div class="faq">
+          <div class="faq-q">
+            How does this impact other key HR processes (performance and remuneration review etc.)?
+          </div>
+          <div class="faq-a">
+            We will align framework to existing Group people processes, so there will be no change.
           </div>
         </div>
     </div>
