--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   <div class="banner_container">
     <div class="banner">
       <div class="banner_overlay">
+        <div class="banner_back">
+          <a href="index.html">
+            <img src="img/icon_back.png" height="60px"/>
+          </a>
+        </div>
         <div class="banner_title1">Technical Pathways</div>
         <div class="banner_title2">
           As we continue to evolve from a bank to a digitally enabled organisation, deep technical skills are critical to our success and so we have designed an alternative path where employees are recognised and rewarded for technical leadership, providing them with a clear path for advancement, alongside the traditional people leadership career pathway.
@@ -38,7 +43,7 @@
   </div>
 
   <div class="tree tree_home">
-    <div class="col"></div>
+    <div class="col_end"></div>
     <div class="col">
       <div class="top_spacer"></div>
       <div class="path_label">
@@ -51,9 +56,7 @@
             <td class="td-icon gold">
               <img src="img/icon-user.png" height="20px"/>
             </td>
-            <td class="td-text role">
-              Executive Consultant
-            </td>
+            <td class="td-text role">Executive Consultant</td>
           </tr>
         </tbody>
       </table>
@@ -64,9 +67,7 @@
             <td class="td-icon gold">
               <img src="img/icon-user.png" height="20px"/>
             </td>
-            <td class="td-text role">
-              Principal Consultant
-            </td>
+            <td class="td-text role">Principal Consultant</td>
           </tr>
         </tbody>
       </table>
@@ -78,9 +79,7 @@
             <td class="td-icon gold">
               <img src="img/icon-user.png" height="20px"/>
             </td>
-            <td class="td-text role">
-              Specialist Consultant
-            </td>
+            <td class="td-text role">Specialist Consultant</td>
           </tr>
         </tbody>
       </table>
@@ -94,24 +93,24 @@
         </div>
       </div>
       <div class="mid_spacer"></div>
-      <div class="circle_container role_1">
-        <div class="circle">
-          <span class="helper"></span>
-          <span class="role">Senior Consultant</span>
+      <div class="circle_container">
+        <div class="circle role_1">
+          <!-- <span class="helper"></span> -->
+          <div class="role">Senior Consultant</div>
         </div>
       </div>
       <div class="circle_spacer"><img src="img/icon_arrowup.png" /></div>
-      <div class="circle_container role_2">
-        <div class="circle">
-          <span class="helper"></span>
-          <span class="role">Consultant</span>
+      <div class="circle_container">
+        <div class="circle role_2">
+          <!-- <span class="helper"></span> -->
+          <div class="role">Consultant</div>
         </div>
       </div>
       <div class="circle_spacer"><img src="img/icon_arrowup.png" /></div>
-      <div class="circle_container role_3">
-        <div class="circle">
-          <span class="helper"></span>
-          <span class="role">Graduate</span>
+      <div class="circle_container">
+        <div class="circle role_3">
+          <!-- <span class="helper"></span> -->
+          <div class="role">Graduate</div>
         </div>
       </div>
     </div>
@@ -126,9 +125,7 @@
             <td class="td-icon blue">
               <img src="img/icon-user.png" height="20px"/>
             </td>
-            <td class="td-text role">
-              Executive Manager
-            </td>
+            <td class="td-text role">Executive Manager</td>
           </tr>
         </tbody>
       </table>
@@ -139,9 +136,7 @@
             <td class="td-icon blue">
               <img src="img/icon-user.png" height="20px"/>
             </td>
-            <td class="td-text role">
-              Senior Manager
-            </td>
+            <td class="td-text role">Senior Manager</td>
           </tr>
         </tbody>
       </table>
@@ -152,15 +147,13 @@
             <td class="td-icon blue">
               <img src="img/icon-user.png" height="20px"/>
             </td>
-            <td class="td-text role">
-              Manager
-            </td>
+            <td class="td-text role">Manager</td>
           </tr>
         </tbody>
       </table>
       <div class="role_spacer_end"><div></div></div>
     </div>
-    <div class="col"></div>
+    <div class="col_end"></div>
   </div>
 
   <div class="statement">
@@ -213,74 +206,6 @@
     <div class="title">FAQs</div>
     <div class="description">Click here to browse frequently asked questions.</div>
   </div>
-
-  <!-- <div class="modal-faq">
-    <div class="modal">
-      <div class="content">
-        <div class="close">
-          <img class="icon_close" src="img/icon_close.png" height="20px" />
-        </div>
-        <div class="title">FAQs</div>
-        <div class="description">
-          <div class="faq">
-            <div class="faq-q">What is a technical career pathway within ES?</div>
-            <div class="faq-a">
-              <p>Traditionally individuals have progressed in Enterprise Services by taking on people leadership responsibilities in order to become more senior. As we continue to evolve from a bank to a digitally enabled organisation, deep technical skills are in high demand and we need to recognise and support these individuals.</p>
-
-              <p>We have designed an alternative path where employees are recognised and rewarded for technical leadership, providing them with a clear path for advancement, alongside the traditional people leadership career pathway.</p>
-
-              <p>We have identified 4 areas with the greatest current need for Technical Pathways in ES and they are: Analytics, Architecture, Engineering and Cyber.</p>
-            </div>
-          </div>
-
-          <div class="faq">
-            <div class="faq-q">As an employee, what does this mean for my career?</div>
-            <div class="faq-a">Individuals can identify the most appropriate pathway based on their interests and skills. Current or aspiring people leaders can pursue a management pathway if desired and technical leaders can continue to build their deep technical skills/expertise.</div>
-          </div>
-
-          <div class="faq">
-            <div class="faq-q">How do I use this to guide my career?</div>
-            <div class="faq-a">
-              The technical career pathway is a framework to help support career progression and recognition for both people leaders and more technically focussed individuals. It is not prescriptive but can help you understand how your current skills or role align to other roles within the framework and what you may need to develop to progress or change role. It also provides a useful reference point for career conversations with your manager.
-            </div>
-          </div>
-
-          <div class="faq">
-            <div class="faq-q">Does this mean my role will change?</div>
-            <div class="faq-a">
-              Your current role won’t change as a result of the Technical Career Pathway being introduced.
-            </div>
-          </div>
-
-          <div class="faq">
-            <div class="faq-q">Does this mean I don’t have to manage people to get promoted?</div>
-            <div class="faq-a">
-              The technical career pathway will allow you to be recognised in more senior roles without having to move into people management. Your primary focus will be technical thought leadership and work, however depending on your individual team structure and your career aspirations, you may have a small team under you at some point.
-            </div>
-          </div>
-
-          <div class="faq">
-            <div class="faq-q">
-              Can I move between the 2 pathways if I decide I want to manage people later on?
-            </div>
-            <div class="faq-a">
-              Yes, but this will depend on your broader skillset and the individual role you are considering.
-            </div>
-          </div>
-
-          <div class="faq">
-            <div class="faq-q">
-              Why is my role not included?
-            </div>
-            <div class="faq-a">
-              Business leaders in consultation with HR have identified technical roles based on those areas where technical skills are currently in highest demand and therefore have the greatest need for a Technical Pathway. We will focus on these roles initially and review these in the future.
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </div> -->
 
   <div class="modal" id="faq">
     <div class="modal-content">
@@ -384,10 +309,28 @@
             We will align framework to existing Group people processes, so there will be no change.
           </div>
         </div>
+      </div>
     </div>
   </div>
 
-  <!-- <div class="footer"></div> -->
+  <div class="modal" id="generic">
+    <div class="modal-content">
+      <img class="icon_close" src="img/icon_close.png" height="14px" />
+      <div class="modal-title">Principal Engineer</div>
+      <div class="description">
+        "Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+
+        Demonstrates advanced to outstanding competency in adjacent and/or underlying technology and practices
+
+        Utilises and makes contribution to industry resources and practices
+
+        Seen as an expert by industry standards"
+
+        "Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+      </div>
+
+    </div>
+  </div>
 
   <script src="js/vendor/jquery-1.12.0.min.js"></script>
   <script src="js/slick/slick.js"></script>
