--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
   <div class="modal" id="generic">
     <div class="modal-content">
       <img class="icon_close" src="img/icon_close.png" height="14px" />
-      <div class="modal-title">Principal Engineer</div>
+      <div class="modal-title">Executive Consultant</div>
       <div class="description">
         "Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
 
