--- a/index.html
+++ b/index.html
@@ -314,19 +314,154 @@
   </div>
 
   <div class="modal" id="generic">
-    <div class="modal-content">
+    <div class="modal-content modal-generic">
       <img class="icon_close" src="img/icon_close.png" height="14px" />
-      <div class="modal-title">Executive Consultant</div>
-      <div class="description">
-        "Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+      <div class="modal-title"></div>
+      <div class="job-banner">
+        <div class="job-title">Executive Consultant</div>
+        <div class="job-desc">Outstanding capability and impact. Overall technical accountability for a platform's technology.</div>
+      </div>
+      <div class="competency">
+        <div class="label" style="margin-top: 0px">Technical Competency</div>
+        <ul class="list">
+          <li>
+            Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+          </li>
+          <li>
+            Demonstrates advanced to outstanding competency in adjacent and/or underlying technology and practices.
+          </li>
+          <li>
+            Utilises and makes contribution to industry resources and practices.
+          </li>
+          <li>
+            Seen as an expert by industry standards.
+          </li>
+        </ul>
+      </div>
+      <div class="delivery">
+        <div class="label">Delivery</div>
+        <ul class="list">
+          <li>
+            Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+          </li>
+          <li>
+            Demonstrates advanced to outstanding competency in adjacent and/or underlying technology and practices.
+          </li>
+          <li>
+            Utilises and makes contribution to industry resources and practices.
+          </li>
+          <li>
+            Seen as an expert by industry standards.
+          </li>
+        </ul>
+      </div>
 
-        Demonstrates advanced to outstanding competency in adjacent and/or underlying technology and practices
+      <div class="personal">
+        <div class="label">Personal Development</div>
+        <ul class="list">
+          <li>
+            Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+          </li>
+          <li>
+            Demonstrates advanced to outstanding competency in adjacent and/or underlying technology and practices.
+          </li>
+          <li>
+            Utilises and makes contribution to industry resources and practices.
+          </li>
+          <li>
+            Seen as an expert by industry standards.
+          </li>
+        </ul>
+      </div>
 
-        Utilises and makes contribution to industry resources and practices
+      <div class="practice">
+        <div class="label">Practice Development</div>
+        <ul class="list">
+          <li>
+            Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+          </li>
+          <li>
+            Demonstrates advanced to outstanding competency in adjacent and/or underlying technology and practices.
+          </li>
+          <li>
+            Utilises and makes contribution to industry resources and practices.
+          </li>
+          <li>
+            Seen as an expert by industry standards.
+          </li>
+        </ul>
+      </div>
 
-        Seen as an expert by industry standards"
+      <div class="strategy">
+        <div class="label">Strategy</div>
+        <ul class="list">
+          <li>
+            Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+          </li>
+          <li>
+            Demonstrates advanced to outstanding competency in adjacent and/or underlying technology and practices.
+          </li>
+          <li>
+            Utilises and makes contribution to industry resources and practices.
+          </li>
+          <li>
+            Seen as an expert by industry standards.
+          </li>
+        </ul>
+      </div>
 
-        "Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+      <div class="accountability">
+        <div class="label">Asset Accountability</div>
+        <ul class="list">
+          <li>
+            Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+          </li>
+          <li>
+            Demonstrates advanced to outstanding competency in adjacent and/or underlying technology and practices.
+          </li>
+          <li>
+            Utilises and makes contribution to industry resources and practices.
+          </li>
+          <li>
+            Seen as an expert by industry standards.
+          </li>
+        </ul>
+      </div>
+
+      <div class="leadership">
+        <div class="label">Leadership</div>
+        <ul class="list">
+          <li>
+            Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+          </li>
+          <li>
+            Demonstrates advanced to outstanding competency in adjacent and/or underlying technology and practices.
+          </li>
+          <li>
+            Utilises and makes contribution to industry resources and practices.
+          </li>
+          <li>
+            Seen as an expert by industry standards.
+          </li>
+        </ul>
+      </div>
+
+      <div class="team">
+        <div class="label">Team Development</div>
+        <ul class="list">
+          <li>
+            Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
+          </li>
+          <li>
+            Demonstrates advanced to outstanding competency in adjacent and/or underlying technology and practices.
+          </li>
+          <li>
+            Utilises and makes contribution to industry resources and practices.
+          </li>
+          <li>
+            Seen as an expert by industry standards.
+          </li>
+        </ul>
       </div>
 
     </div>
