--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <div class="more">Learn more</div>
       </div>
     </div>
-    <div class="pathway pathway_systems">
+    <!-- <div class="pathway pathway_systems">
       <div class="pathway_container">
         <div class="image pw_engineering"></div>
         <div class="title">
@@ -197,7 +197,7 @@
         </div>
         <div class="more">Learn more</div>
       </div>
-    </div>
+    </div> -->
   </div>
 
 
@@ -322,7 +322,7 @@
         <div class="job-desc">Outstanding capability and impact. Overall technical accountability for a platform's technology.</div>
       </div>
       <div class="competency">
-        <div class="label" style="margin-top: 0px">Technical Competency</div>
+        <div class="label">Technical Competency</div>
         <ul class="list">
           <li>
             Demonstrates outstanding competency in core technology and practices across substantial strategic assets and practices at the platform level.
